# Ariadne

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  analysis_20250112.ipynb  environment.yaml  main.py  pareto_functions.py  pyproject.toml  quantify.py
.claude/commands/: changelog.md  cleanup-merged.md  coverage.md  lint.md  pr-description.md  pre-merge-check.md  release.md  review-pr.md  test.md
.github/workflows/: python-publish.yml  test-dev.yml
assets/: broken-40_A_14.txt  full-29_B_14.txt
docs/: README.md  output-fields.md  scientific-methods.md
openspec/: project.md
openspec/changes/add-alpha-interpolation/: tasks.md
openspec/changes/add-analysis-progress-feedback/: proposal.md  tasks.md
openspec/changes/add-analysis-progress-feedback/specs/gui/: spec.md
openspec/changes/add-claude-commands/: tasks.md
openspec/changes/add-comprehensive-test-coverage/: design.md  proposal.md  tasks.md
openspec/changes/add-development-commands/: proposal.md
openspec/changes/add-format-number-helper/: tasks.md
openspec/changes/add-pr27-edge-case-tests/specs/root-analysis/: spec.md
openspec/changes/add-scaling-tests/: proposal.md
openspec/changes/add-scientific-integration-tests/: proposal.md
openspec/changes/add-scientific-integration-tests/specs/testing/: spec.md
openspec/changes/add-tradeoff-calculation/: proposal.md  tasks.md
openspec/changes/archive/: README.md
openspec/changes/archive/2025-12-05-fix-scaling-and-serialization-bugs/specs/analysis-output/: spec.md
openspec/changes/archive/2025-12-05-fix-scaling-and-serialization-bugs/specs/csv-output/: spec.md
openspec/changes/archive/2025-12-05-fix-scaling-and-serialization-bugs/specs/testing/: spec.md
openspec/changes/archive/2025-12-05-modernize-pypi-publish-workflow/: proposal.md  tasks.md
openspec/changes/archive/2026-02-17-add-analysis-progress-feedback/: proposal.md
openspec/changes/archive/2026-02-17-add-scientific-integration-tests/: tasks.md
openspec/changes/archive/2026-02-17-add-scientific-integration-tests/specs/testing/: spec.md
openspec/changes/archive/2026-02-17-fix-3d-plot-argument/: proposal.md
openspec/changes/archive/2026-02-17-fix-3d-scaling-exclusions/specs/csv-output/: spec.md
openspec/changes/archive/2026-02-17-fix-documentation-accuracy/specs/documentation/: spec.md
openspec/changes/archive/2026-02-17-update-documentation-dry/specs/documentation/: spec.md
openspec/changes/archive/2026-02-18-update-3d-pareto-label/: proposal.md
openspec/changes/archive/add-alpha-interpolation/: proposal.md  tasks.md
openspec/changes/archive/add-alpha-interpolation/specs/analysis-output/: spec.md
openspec/changes/archive/add-claude-commands/: design.md  proposal.md
openspec/changes/archive/add-claude-commands/specs/development-commands/: spec.md
openspec/changes/archive/add-comprehensive-test-coverage/: tasks.md
openspec/changes/archive/add-development-commands/: proposal.md  tasks.md
openspec/changes/archive/add-format-number-helper/: proposal.md
openspec/changes/archive/add-pr27-edge-case-tests/: proposal.md  tasks.md
openspec/changes/archive/add-scaling-tests/: tasks.md
openspec/changes/archive/add-tradeoff-calculation/: proposal.md  tasks.md
openspec/changes/archive/improve-ci-workflow-best-practices/: proposal.md  tasks.md
openspec/changes/archive/integrate-pr29-scaling-features/: proposal.md  tasks.md
openspec/changes/fix-3d-pareto-distance-interpolation/: design.md  proposal.md  tasks.md
openspec/changes/fix-3d-pareto-distance-interpolation/specs/analysis-output/: spec.md
openspec/changes/fix-3d-pareto-robustness/: design.md  future-issue-modular-cost-terms.md  proposal.md  tasks.md
openspec/changes/fix-3d-pareto-robustness/specs/analysis-output/: spec.md
openspec/changes/fix-3d-pareto-robustness/specs/testing/: spec.md
openspec/changes/fix-3d-plot-argument/: tasks.md
openspec/changes/fix-3d-plot-argument/specs/analysis-output/: spec.md
openspec/changes/fix-3d-plot-argument/specs/testing/: spec.md
openspec/changes/fix-3d-plot-internal-scaling/: proposal.md  tasks.md
openspec/changes/fix-3d-plot-internal-scaling/specs/analysis-output/: spec.md
openspec/changes/fix-3d-scaling-exclusions/: proposal.md  tasks.md
openspec/changes/fix-3d-scaling-exclusions/specs/testing/: spec.md
openspec/changes/fix-documentation-accuracy/: proposal.md  tasks.md
openspec/changes/fix-documentation-accuracy/specs/documentation/: spec.md
openspec/changes/fix-scaling-and-serialization-bugs/: proposal.md  tasks.md
openspec/changes/improve-ci-workflow-best-practices/: design.md  tasks.md
openspec/changes/integrate-pr29-scaling-features/specs/output-formatting/: spec.md
openspec/changes/integrate-pr29-scaling-features/specs/user-interface/: spec.md
openspec/changes/update-3d-pareto-label/: tasks.md
openspec/changes/update-3d-pareto-label/specs/gui/: spec.md
openspec/changes/update-documentation-dry/: proposal.md  tasks.md
openspec/changes/update-documentation-dry/specs/documentation/: spec.md
openspec/specs/analysis-output/: spec.md
openspec/specs/csv-output/: spec.md
openspec/specs/documentation/: spec.md
openspec/specs/gui/: spec.md
openspec/specs/testing/: spec.md
src/ariadne_roots/: __init__.py  _set1_day1_20231208-172027_001_plantE_day12.json  config.py  main.py  pareto_functions.py  quantify.py  report_20250821_133128.csv  report_20250821_151205.csv  report_20251024_162253.csv  report_20251202_193806.csv  report_20251203_124430.csv  scaling.py
tests/: README.md  conftest.py  fixtures.py  test_config.py  test_csv_output.py  test_main.py  test_pareto_3d.py  test_pareto_functions.py  test_plot_scaling_integration.py  test_quantify.py  test_scaling.py  test_scientific_integration.py
tests/data/: README.md  _set1_day1_20230206-153345_022_EtOH_EXP1_plantB_day10.json  _set1_day1_20230320-154926_001_EtOH_EXP2_plantB_day11.json  _set1_day1_20230509-125246_004_EtOH_EXP3_plantE_day11.json  _set1_day1_20230509-125420_014_plantB_day11.json  fixtures.py  test_issue26_230629PN005_0.json
(+5 files in other folders)
