[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadne-roots"
version = "0.0.3"
authors = [
  { name="Matthieu Platre", email="mattplatre@gmail.com" },
  { name="Kian Faizi", email="kian@caltech.edu" },
  { name="Elizabeth Berrigan", email="eberrigan@salk.edu" },
]
description = "Ariadne root tracing GUI and trait calculator."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
keywords = ["ariadne", "plants", "roots", "phenotyping", "pareto"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
dependencies = [
  "pillow",
  "networkx",
  "numpy",
  "scipy",
  "matplotlib",
]

# ---- uv dev group for contributors/CI ----
[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "pydocstyle",
  "toml",
  "twine",
  "build",
  "ipython",
  "ruff",
]

# ---- PyPI extras for end users who opt in ----
[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "pydocstyle",
  "toml",
  "twine",
  "build",
  "ipython",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/Salk-Harnessing-Plants-Initiative/Ariadne"
Issues = "https://github.com/Salk-Harnessing-Plants-Initiative/Ariadne/issues"

[project.scripts]
ariadne-trace = "ariadne_roots.main:main"

[tool.black]
line-length = 88

[tool.ruff]
extend-exclude = ["*.ipynb"]
line-length = 88

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = [
    "D100",  # Missing docstring in public module (not always needed)
    "D104",  # Missing docstring in public package (not always needed)
    "D107",  # Missing docstring in __init__ (often self-explanatory)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["ariadne_roots"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80.0
